NN-1380 [Activities] Update Cat A H to Cat A High, stop E-List flag wrapping and update Acct flag Colour

--- a/src/Flags/flags.scss
+++ b/src/Flags/flags.scss
@@ -39,8 +39,8 @@
 
   .acct-status {
     @extend %status-style;
-    color: #F47738;
-    border-color: #F47738;
+    color: #D34700;
+    border-color: #D34700;
   }
 
   .elist-status {
